# proofpass

./: LICENSE  README.md
ProofPass/: BROWSER_DEPLOY.md  CONFIGURATION.md  README.md  requirements.txt  start.bat  start.sh
ProofPass/ai_service/: main.py
ProofPass/artifacts/: README.md
ProofPass/contract/: Cargo.toml
ProofPass/contract/src/: lib.rs
ProofPass/crypto_service/: main.py
ProofPass/frontend/: index.html
ProofPass/scripts/: deploy_testnet.sh
