[package]
name = "proofpass"
version = "1.0.0"
authors = ["ProofPass Builder"]
edition = "2021"
description = "ProofPass: Quantum-Safe Identity Registry on Initia — CRYSTALS-Dilithium2 credential anchoring with AI-gated auto-signing"
repository = "https://github.com/yourhandle/proofpass"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = ["staking"] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "2.1"
cw-multi-test = { version = "2.1", features = ["stargate"] }
